--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "heyday",
   "license": "ISC",
   "dependencies": {
+    "canvacord": "^5.2.3",
+    "canvas": "^2.9.0",
     "cron": "^1.8.2",
     "discord.js": "^13.6.0",
-    "dotenv": "^14.2.0"
+    "dotenv": "^14.2.0",
+    "node-fetch": "^3.1.1"
   }
 }
